--- a/index.html
+++ b/index.html
@@ -1,48 +1,151 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sistema de Portaria</title>
-  <script type="module" src="script.js" defer></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GateGuard - Controle de Portaria</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="components/navbar.js"></script>
+    <script src="components/sidebar.js"></script>
+    <script src="components/footer.js"></script>
 </head>
-<body class="bg-dark text-light p-4">
+<body class="bg-gray-50">
+    <custom-navbar></custom-navbar>
+    
+    <div class="flex">
+        <custom-sidebar></custom-sidebar>
+        
+        <main class="flex-1 p-8">
+            <div class="max-w-6xl mx-auto">
+                <div class="flex justify-between items-center mb-8">
+                    <h1 class="text-3xl font-bold text-gray-800">Controle de Portaria</h1>
+                    <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg flex items-center">
+                        <i data-feather="plus" class="mr-2"></i> Novo Registro
+                    </button>
+                </div>
 
-  <div class="container">
-    <h1 class="text-center mb-4">📋 Sistema de Portaria</h1>
+                <div class="bg-white rounded-xl shadow-md overflow-hidden mb-8">
+                    <div class="p-6">
+                        <div class="flex justify-between items-center mb-6">
+                            <h2 class="text-xl font-semibold text-gray-700">Registros Recentes</h2>
+                            <div class="relative">
+                                <input type="text" placeholder="Buscar..." class="pl-10 pr-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                <i data-feather="search" class="absolute left-3 top-2.5 text-gray-400"></i>
+                            </div>
+                        </div>
 
-    <div class="card bg-secondary p-3 mb-4">
-      <div class="row g-3">
-        <div class="col-md-4">
-          <input id="nome" type="text" class="form-control" placeholder="Nome do visitante">
-        </div>
-        <div class="col-md-4">
-          <input id="documento" type="text" class="form-control" placeholder="Documento (RG/CPF)">
-        </div>
-        <div class="col-md-4">
-          <input id="empresa" type="text" class="form-control" placeholder="Empresa">
-        </div>
-      </div>
+                        <div class="overflow-x-auto">
+                            <table class="min-w-full divide-y divide-gray-200">
+                                <thead class="bg-gray-50">
+                                    <tr>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Visitante</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Documento</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Destino</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Entrada</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Saída</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ações</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="bg-white divide-y divide-gray-200">
+                                    <tr>
+                                        <td class="px-6 py-4 whitespace-nowrap">
+                                            <div class="flex items-center">
+                                                <div class="flex-shrink-0 h-10 w-10">
+                                                    <img class="h-10 w-10 rounded-full" src="http://static.photos/people/200x200/1" alt="">
+                                                </div>
+                                                <div class="ml-4">
+                                                    <div class="text-sm font-medium text-gray-900">João Silva</div>
+                                                    <div class="text-sm text-gray-500">joao@email.com</div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">123.456.789-00</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Apartamento 102</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">10:30 15/06</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">12:45 15/06</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                            <button class="text-blue-600 hover:text-blue-900 mr-3"><i data-feather="edit"></i></button>
+                                            <button class="text-red-600 hover:text-red-900"><i data-feather="trash-2"></i></button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-6 py-4 whitespace-nowrap">
+                                            <div class="flex items-center">
+                                                <div class="flex-shrink-0 h-10 w-10">
+                                                    <img class="h-10 w-10 rounded-full" src="http://static.photos/people/200x200/2" alt="">
+                                                </div>
+                                                <div class="ml-4">
+                                                    <div class="text-sm font-medium text-gray-900">Maria Souza</div>
+                                                    <div class="text-sm text-gray-500">maria@email.com</div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">987.654.321-00</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Sala 205</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">14:20 15/06</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">-</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                                            <button class="text-blue-600 hover:text-blue-900 mr-3"><i data-feather="edit"></i></button>
+                                            <button class="text-red-600 hover:text-red-900"><i data-feather="trash-2"></i></button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
 
-      <div class="d-flex justify-content-center mt-3">
-        <button id="registrarEntrada" class="btn btn-success me-2">Registrar Entrada</button>
-        <button id="limpar" class="btn btn-danger">Limpar Campos</button>
-      </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+                    <div class="bg-white rounded-xl shadow-md p-6">
+                        <h3 class="text-lg font-medium text-gray-800 mb-4">Entradas Hoje</h3>
+                        <div class="flex items-center">
+                            <div class="bg-blue-100 p-3 rounded-full mr-4">
+                                <i data-feather="log-in" class="text-blue-600"></i>
+                            </div>
+                            <div>
+                                <p class="text-3xl font-bold text-gray-800">24</p>
+                                <p class="text-sm text-gray-500">+3 em relação a ontem</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white rounded-xl shadow-md p-6">
+                        <h3 class="text-lg font-medium text-gray-800 mb-4">Visitantes Presentes</h3>
+                        <div class="flex items-center">
+                            <div class="bg-green-100 p-3 rounded-full mr-4">
+                                <i data-feather="users" class="text-green-600"></i>
+                            </div>
+                            <div>
+                                <p class="text-3xl font-bold text-gray-800">5</p>
+                                <p class="text-sm text-gray-500">No local atualmente</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-white rounded-xl shadow-md p-6">
+                        <h3 class="text-lg font-medium text-gray-800 mb-4">Entradas Mês</h3>
+                        <div class="flex items-center">
+                            <div class="bg-purple-100 p-3 rounded-full mr-4">
+                                <i data-feather="calendar" class="text-purple-600"></i>
+                            </div>
+                            <div>
+                                <p class="text-3xl font-bold text-gray-800">342</p>
+                                <p class="text-sm text-gray-500">Média de 11 por dia</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 
-    <h3>Histórico de Entradas</h3>
-    <table class="table table-dark table-striped mt-3" id="tabela">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Documento</th>
-          <th>Empresa</th>
-          <th>Data / Hora</th>
-        </tr>
-      </thead>
-      <tbody id="listaVisitantes"></tbody>
-    </table>
-  </div>
+    <custom-footer></custom-footer>
+
+    <script>
+        feather.replace();
+    </script>
+    <script src="script.js"></script>
+<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
 </html>
